After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 768064 - thumbnail: Always use external gdk-pixbuf thumbnailer
thumbnail: Always use external gdk-pixbuf thumbnailer
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: Thumbnail
unspecified
Other All
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
: 765054 (view as bug list)
Depends on:
Blocks: 738503
 
 
Reported: 2016-06-26 11:17 UTC by Bastien Nocera
Modified: 2017-04-06 09:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
thumbnail: Always use external gdk-pixbuf thumbnailer (14.11 KB, patch)
2016-06-26 11:17 UTC, Bastien Nocera
committed Details | Review
thumbnail: Remove unused constant (813 bytes, patch)
2016-12-12 15:22 UTC, Bastien Nocera
committed Details | Review
thumbnail: Remove gnome_desktop_thumbnail_scale_down_pixbuf() (7.21 KB, patch)
2016-12-12 15:22 UTC, Bastien Nocera
accepted-commit_now Details | Review

Description Bastien Nocera 2016-06-26 11:17:30 UTC
.
Comment 1 Bastien Nocera 2016-06-26 11:17:35 UTC
Created attachment 330398 [details] [review]
thumbnail: Always use external gdk-pixbuf thumbnailer

Instead of special-casing gdk-pixbuf-supported image formats, use an
external thumbnailer. This will give us the ability to:
- cancel running thumbnail operations
- avoid memory leaks, buffer overflows, double-frees, etc. in the
  image loaders having an impact on the application
- limit resource usage when thumbnailing
Comment 2 Matthias Clasen 2016-07-01 14:18:54 UTC
Review of attachment 330398 [details] [review]:

Looks good to me, fwiw
Comment 3 Bastien Nocera 2016-12-12 13:31:49 UTC
*** Bug 765054 has been marked as a duplicate of this bug. ***
Comment 4 Bastien Nocera 2016-12-12 15:22:10 UTC
Created attachment 341822 [details] [review]
thumbnail: Remove unused constant
Comment 5 Bastien Nocera 2016-12-12 15:22:16 UTC
Created attachment 341823 [details] [review]
thumbnail: Remove gnome_desktop_thumbnail_scale_down_pixbuf()

gnome-desktop is not a general purpose library for use by application
developers, but rather a convenience library for core desktop components
to share code. As such, it has no guarantee of API stability, and we can
remove functions without having to obsolete them.

Having said that, the internal user of this function was removed in bug
768064, and external users should be using the default gdk-pixbuf
scaling functions. If specific changes need to be made to those, they'll
need to be handled separately.
Comment 6 Matthias Clasen 2016-12-12 15:28:13 UTC
Review of attachment 341822 [details] [review]:

sure
Comment 7 Matthias Clasen 2016-12-12 15:29:07 UTC
Review of attachment 341823 [details] [review]:

Looks fine to me
Comment 8 Bastien Nocera 2016-12-12 15:30:49 UTC
Comment on attachment 341823 [details] [review]
thumbnail: Remove gnome_desktop_thumbnail_scale_down_pixbuf()

I've moved this patch to bug 775991, as there are some applications that depend on it.
Comment 9 Bastien Nocera 2016-12-12 15:40:58 UTC
Attachment 330398 [details] pushed as b69fde6 - thumbnail: Always use external gdk-pixbuf thumbnailer
Attachment 341822 [details] pushed as dba6d95 - thumbnail: Remove unused constant
Comment 10 Jeremy Bicha 2017-04-05 23:52:56 UTC
I think this regressed svg thumbnail support: https://bugzilla.gnome.org/780956
Comment 11 Bastien Nocera 2017-04-06 09:13:22 UTC
(In reply to Jeremy Bicha from comment #10)
> I think this regressed svg thumbnail support:
> https://bugzilla.gnome.org/780956

I know it breaks librsvg thumbnails, that's why I filed bug 778666 :)