thumbnail: Always use external gdk-pixbuf thumbnailer

Instead of special-casing gdk-pixbuf-supported image formats, use an
external thumbnailer. This will give us the ability to:
- cancel running thumbnail operations
- avoid memory leaks, buffer overflows, double-frees, etc. in the
  image loaders having an impact on the application
- limit resource usage when thumbnailing

https://bugzilla.gnome.org/show_bug.cgi?id=768064

origin commit:
https://gitlab.gnome.org/GNOME/gnome-desktop/commit/b69fde6
https://gitlab.gnome.org/GNOME/gnome-desktop/commit/dba6d95