libmate-desktop/mate-thumbnail-pixbuf-utils.c
@@ -32,8 +32,6 @@
 #define MATE_DESKTOP_USE_UNSTABLE_API
 #include "mate-desktop-thumbnail.h"
 
-#define LOAD_BUFFER_SIZE 65536
-
 /**
  * mate_desktop_thumbnail_scale_down_pixbuf:
  * @pixbuf: a #GdkPixbuf
